# challenge2-recommender

./: .dockerignore  .dvcignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  render.yaml
docs/: architecture.md  model_card.md  results.md  video_star.md
scripts/: run_checks_windows.ps1  setup_windows.ps1  validate_env.py
src/ecommerce_recommender/: __init__.py  settings.py  utils.py
src/ecommerce_recommender/api/: main.py  schemas.py
src/ecommerce_recommender/data/: __init__.py  generate.py
src/ecommerce_recommender/features/: __init__.py  prepare.py
src/ecommerce_recommender/models/: baseline.py  dataset.py  evaluate.py  metrics.py  mlp.py  registry.py  train.py
src/ecommerce_recommender/services/: recommendation.py
tests/: test_data_pipeline.py  test_metrics.py
