[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ecommerce-recommender"
version = "0.1.0"
description = "Sistema de recomendacao e-commerce com PyTorch, Scikit-Learn, MLflow, DVC e Docker."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dvc>=3.55.0,<4.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "joblib>=1.4.0,<2.0.0",
  "mlflow>=2.17.0,<3.0.0",
  "numpy>=1.26.0,<3.0.0",
  "pandas>=2.2.0,<3.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pyyaml>=6.0.0,<7.0.0",
  "scikit-learn>=1.5.0,<2.0.0",
  "torch>=2.4.0,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "ipykernel>=6.29.0,<7.0.0",
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.6.0,<1.0.0",
]

[project.scripts]
generate-data = "ecommerce_recommender.data.generate:main"
prepare-data = "ecommerce_recommender.features.prepare:main"
train-model = "ecommerce_recommender.models.train:main"
evaluate-model = "ecommerce_recommender.models.evaluate:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ecommerce_recommender"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
